=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.16_03-dev

default --with-layout to `Apache' for 1.3.4, can be overridden with
APACI_ARGS or APACHE_LAYOUT Makefile.PL attribute

t/TEST =~ s/mod_perl_httpd.pid/httpd.pid 
[Bruce W. Hoylman <bhoylma@advtech.uswest.com>]

use a "%s" format for ap_log_{r}error, so %'s in the log message
string are not treated as format strings

INSTALL updates [Tom Hukins <tom@eborcom.com>]

=item 1.16_02 - November 30, 1998

removed PERLV define, just use patchlevel.h's defines

fix bug w/ push_handlers(PerlCleanupHandler => ...) spotted by 
Jan-Pieter Cornet and Philp Gwyn

remove references to the deprecated CGI::Switch

initialize %LocationMatch, %DirectoryMatch, %FilesMatch and tie to IxHash
for <Perl> sections [Eric Cholet <cholet@logilune.com>]

when <Perl> sections empty a symbol table, don't clear imported/aliased
variables (e.g. %Config::Config)

remove warning if Apache::Table was not already loaded

sv2request_rec (Apache typemap) will look for '~' so xs modules can
subclass without using a HASH ref (e.g. Apache::Request NG)

<Perl> sections will always make sure Apache.pm is loaded

=item 1.16_01 - November 24, 1998

$r->connection->remote_addr can now be changed

upgrade perl_PL.h to work with Perl 5.005_53+

use absolute path for StrongholdLicenseFile
[Todd R. Eigenschink <todd@tekinteractive.com>]

only perl_section_self_boot() if an %Apache::ReadConfig:: entry is defined()
this fixes a bug spotted by Eric Cholet where a startup file
subroutine that accessed %Apache::ReadConfig:: would trigger a
self-boot wipe-out

add Perl/$] to Server: header if $Apache::Server::AddPerlVersion is true

fixed refcnt bug in $r->current_callback

some Apache::Constants updates (see the .pod) and new export() method

ensure @INC value from startup time is always properly saved

pod support '=for apache/=end apache' replaced with:
 =over to apache
 #directives for apache
 =back to pod
