@@ -3,6 +3,8 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- turn of strip of httpd in Apache's install.sh
+
 - -e and setuid problem (Steve Neilsen)
 
 - method handler called when it shouldn't be? (Ken)
@@ -12,8 +14,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - Apache::Status extensions (ix)
 
 - <perl> sections and DirectoryIndex (Eric Cholet)
-
-- Apache::ExtUtils error checking
 
 - Perl{Set,Pass}Env tainted, should they not be? (Vivek)
 
