@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_03-dev
 
+Apache::ExtUtils will complain if it can't determine the
+directive handler prototype (args_how), rather than fail during 'make'
+
 default --with-layout to `Apache' for 1.3.4, can be overridden with
 APACI_ARGS or APACHE_LAYOUT Makefile.PL attribute
 
